style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --primary-bg-color: #0f172a;
    --secondary-bg-color: #334155;
    --dimmed-bg-color: #475569;
    --light-bg-color: #f1f5f9;
    --red-bg-color: #dc2626;
    --dimmed-red-color: #f14e4e;
}

body {
    margin: 0;
    padding: 0;
    font-family: Poppins, sans-serif;
    height: 100vh;
    display: grid;
    grid-template-rows: min-content auto;
}

header {
    padding: 20px;
    background-color: var(--primary-bg-color);
    color: white;
    font-size: 2rem;
    
    backdrop-filter: blur(10px);

    display: flex;
    justify-content: space-between;
    align-items: center;
}

#logo {
    font-weight: 800;
}

button {
    color: white;
    font-weight: 600;
    padding: 10px 12px;
    
    border: none;
    border-radius: 100vw;
    
    transition: all 300ms;
}

header > button {
    background-color: var(--secondary-bg-color);
    font-size: 1.1rem;

    display: flex;
    align-items: center;
    justify-content: space-between;
}

button:hover {
    cursor: pointer;
    background-color: var(--dimmed-bg-color);

    > img {
        transform: rotate(90deg) scale(1.4);
    }
}

button:active {
    transform: scale(0.95);
}

button > span {
    margin-right: 6px;
}

header > button > span::before {    
    content: " ";
    padding-block: 5px;
    border-left: 1px solid white;
    border-right: 1px solid white;
    border-radius: 100vw;
    margin-inline: 4px 8px;
}

button > span:active {
    transform: scale(1);
}

button > img {
    height: 1.4em;
    transition: all 250ms;
}


dialog {
    outline: none;
    border: none;
    border-radius: 20px;
    padding: 24px 42px;
}

dialog::backdrop {
    background-color: rgba(15, 23, 42, 0.3);
    backdrop-filter: blur(5px);
}

form {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

form > button {
    background-color: var(--primary-bg-color);
    font-size: 1.1rem;
}

form > div {
    font-size: 1.1rem;
    display: flex;
    gap: 2px;
    
    &.field {
        flex-direction: column;
    }
}

input {
    margin: 0;
    padding: 0;
}

input:not([type="checkbox"]) {
    border: none;
    outline: none;
    border-radius: 100vw;
    background-color: var(--light-bg-color);
    font-size: 1.1rem;
    padding: 4px 8px;
}


main {
    padding: 64px;
    background-color: var(--light-bg-color);
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 400px));
    justify-content: center;
    gap: 32px;
}

.card {
    background-color: white;
    box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.2);
    border-radius: 20px;
    height: max-content;
    padding: 32px;
    font-size: 1.3rem;

    display: flex;
    flex-direction: column;
    gap: 32px;
}

.info {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.btns {
    display: flex;
    gap: 12px;
    flex-wrap: wrap;
}

.btns button {
    font-size: 1.05rem;
    flex: auto;
}

.btns :first-child {
    --hover-bg-color: rgba(71, 85, 105, 0.85);
    background-color: var(--dimmed-bg-color);
    
    &:hover {
        background-color: var(--hover-bg-color);
    }
    
    &::before {
        content: "Not Read";
    }
}

.read {
    background-color: #16a34a !important;
    
    &:hover {
        background-color: #15803d !important;
    }

    &::before {
        display: none;
    }

    &::after {
        content: "Read";
    }
}

#removeBtn {
    background-color: var(--red-bg-color);
}

#removeBtn:hover {
    background-color: var(--dimmed-red-color);
}

